<resources>
    <string name="app_name">TrabalhoDSO3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NBA Basquete</string>
    <string name="nav_header_subtitle">Toronto Raptors</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_resultados">Resultados</string>
    <string name="menu_integrantes">Integrantes</string>
    <string name="menu_noticias">Notícias</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_videos">Vídeos</string>
    <string name="title_activity_resultados">Ultimas Partidas</string>
    <string name="Jogo1">Toronto Raptors 118 x 109 GSW</string>
    <string name="Jogo2">Toronto Raptors 104 x 109 GSW</string>
    <string name="JogoData1">Quarta-feira 05/06/2019 22:00</string>
    <string name="JogoData2">Sexta-feira 07/06/2019 22:00</string>
    <string name="JogoData3">Segunda-feira 10/06/2019 22:00</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="title_activity_integrantes">Integrantes</string>
    <string name="title_activity_noticias">Notícias</string>
    <string name="title_activity_videos">Vídeos</string>

    <!--<string name="app_name">VideoTube</string>-->
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="title_activity_video_menu">VideoMenuActivity</string>
</resources>
