<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_resutaldo"
            android:title="@string/menu_resultados" />
        <item
            android:id="@+id/nav_noticias"
            android:title="@string/menu_noticias" />
        <item
            android:id="@+id/nav_agenda"
            android:title="@string/menu_agenda" />
        <item
            android:id="@+id/nav_view"
            android:title="@string/menu_videos" />
        <item
            android:id="@+id/nav_integrantes"
            android:title="@string/menu_integrantes" />
    </group>

</menu>
